# instagram-clone-app

./: pyproject.toml
instagram/: CHAT_DOCUMENTATION.md  CHAT_TESTING_GUIDE.md  README.md  SETUP_INSTRUCTIONS.md  db.sqlite3  verify_setup.py
instagram/Chat/: models.py  urls.py  views.py
instagram/Chat/migrations/: 0001_initial.py
instagram/Comments/: models.py  views.py
instagram/Comments/migrations/: 0001_initial.py  0002_commentmodel_parent.py
instagram/Interactions/: apps.py  models.py  views.py
instagram/Interactions/migrations/: 0001_initial.py  0002_commentlike_dislike.py  0003_follow.py
instagram/Posts/: forms.py  models.py  urls.py  views.py
instagram/Posts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_postmodel_post_image.py  0004_alter_postmodel_post_image.py
instagram/Users/: models.py  urls.py  views.py
instagram/Users/migrations/: 0001_initial.py  0002_alter_user_profile_image.py  0003_alter_user_profile_image.py
instagram/instagram/: settings.py  urls.py
instagram/templates/account/: auth_base.html  login.html  logout.html  me.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  profile.html  signup.html
instagram/templates/chat/: room.html
instagram/templates/posts/: base.html  create.html  delete.html  list.html  list_detail.html  update.html
